fixed layout issues

--- a/style.css
+++ b/style.css
@@ -306,6 +306,8 @@ section {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .section-container {
@@ -338,7 +340,15 @@ section {
   justify-content: center;
   flex-direction: column;
 }
-
+.details-container-ex {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
 .article-container {
   display: flex;
   text-align: initial;
